added calendar page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -103,3 +103,14 @@ form {
     float: left;
     margin: 10px;
 }
+
+.calendarText {
+    color: black;
+    text-align: center;
+}
+
+.react-calendar {
+    width: 100% !important;
+    height: 100% !important;
+    align-content: center;
+}
