--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,6 +131,7 @@ input {
 
     float: left;
     text-align: left;
+
     margin-left: 10px;
 
 
@@ -144,4 +145,8 @@ form {
 
 .container {
     float:left;
+    margin-left: 1em;
+    margin-top: -1.5em;
+
+
 }
